--- a/products.html
+++ b/products.html
@@ -5,7 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
+    <link rel="stylesheet" href="style/products.css" />
     <title>La fresca</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1></h1>
+      <div class="grid_1-1">
+        <div class="menu_pasta1"></div>
+        <div class="grid_1-1_pasta1"></div>
+      </div>
+      <div class="grid_1-1">
+        <div class="grid_1-1_order"></div>
+        <div class="menu_pasta2"></div>
+      </div>
+      <div class="grid_1-1">
+        <div class="menu_pasta3"></div>
+        <div class="grid_1-1_pasta3"></div>
+      </div>
+      <div class="grid_1-1">
+        <div class="grid_1-1_order"></div>
+        <div class="menu_pasta4"></div>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
