--- a/products.html
+++ b/products.html
@@ -8,25 +8,60 @@
     <link rel="stylesheet" href="style/products.css" />
     <title>La fresca</title>
   </head>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Selection</a></li>
+        <li><a href="about.html">About us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   <body>
     <main>
-      <h1></h1>
+      <h1>Our pasta</h1>
+      <h2>Prices/100g</h2>
       <div class="grid_1-1">
-        <div class="menu_pasta1"></div>
+        <div class="menu_pasta1">
+          <h3>Gnocchi</h3>
+          <p>- classic______________ 24,-</p>
+          <p>- beetroot_____________ 24,-</p>
+        </div>
         <div class="grid_1-1_pasta1"></div>
       </div>
       <div class="grid_1-1">
         <div class="grid_1-1_order"></div>
-        <div class="menu_pasta2"></div>
+        <div class="menu_pasta2">
+          <h3>Tagilatelle</h3>
+          <p>- classic______________ 35,-</p>
+          <p>- herbs_______________ 39,-</p>
+        </div>
       </div>
       <div class="grid_1-1">
-        <div class="menu_pasta3"></div>
+        <div class="menu_pasta3">
+          <h3>Ravioli</h3>
+          <p>- heat_________________ 65,-</p>
+          <p>- pumpkin_____________ 49,-</p>
+          <p>- truffle & cheese_______ 59,-</p>
+          <p>- ricotta & spinach______ 45,-</p>
+          <p>- mushroom___________ 49,-</p>
+        </div>
         <div class="grid_1-1_pasta3"></div>
       </div>
       <div class="grid_1-1">
         <div class="grid_1-1_order"></div>
-        <div class="menu_pasta4"></div>
+        <div class="menu_pasta4">
+          <h3>Sauces</h3>
+          <p>- homemade bolognese__ 43,-</p>
+          <p>- wild boar ragú________ 60,-</p>
+          <p>- roe deer ragú_________ 60,-</p>
+          <p>- cacio & pepe_________ 65,-</p>
+          <p>- carbonara____________ 65,-</p>
+          <p>- parmigiano cream_____ 45,- (90 g)</p>
+        </div>
       </div>
+      <p>Since our products are artisanal, we might not have all the options every day. DM us on Instagram or call us for info on availability.</p>
     </main>
     <footer></footer>
   </body>
