--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
+    <link rel="stylesheet" href="style/contact.css" />
     <title>La fresca</title>
   </head>
-  <body></body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Selection</a></li>
+        <li><a href="about.html">About us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <body>
+    <main>
+      <h1>Write to us</h1>
+      <div class="grid_1-1">
+        <div class="kontakt">
+          <h2>Contact us</h2>
+        </div>
+
+        <div class="oplysninger">
+          <p>We would love to hear from you! For any questions, feedback or suggestion, don’t hesitate to reach out</p>
+          <p>Jernbane Allé 35, St.Tv. 2720 Vanløse</p>
+          <p>Cvr. 43010670</p>
+          <h3>For customers</h3>
+          <p>p: +45 71 80 33 78</p>
+          <p>info@lafresca.dk</p>
+          <h3>For business</h3>
+          <p>+45 20 43 65 42</p>
+          <p>business@lafresca.dk</p>
+          <h3>Opening hours</h3>
+          <p>Monday - Thursday: 11:00 - 19:00</p>
+          <p>Friday: 11:00 - 18:00</p>
+          <p>Saturday: Closed</p>
+          <p>Sunday: 12:00 - 18:00</p>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
