--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,23 @@
       <div class="grid_1-1">
         <div class="kontakt">
           <h2>Contact us</h2>
+
+          <form>
+            <!-- Formular-indhold -->
+            <div class="form-felt">
+              <label for="name">Name:</label>
+              <input placeholder="sofie" />
+            </div>
+
+            <div class="form-felt">
+              <label for="email">Email:</label>
+              <input placeholder="sofie.hansen@gmail.com" />
+            </div>
+
+            <div class="form-felt">
+              <textarea name="besked">Write a message here...</textarea>
+            </div>
+          </form>
         </div>
 
         <div class="oplysninger">
