--- a/products.html
+++ b/products.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="style/products.css" />
+    <link rel="stylesheet" href="style/overall.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <title>La fresca</title>
   </head>
   <header>
@@ -25,8 +28,8 @@
       <div class="grid_1-1">
         <div class="menu_pasta1">
           <h3>Gnocchi</h3>
-          <p>- classic______________ 24,-</p>
-          <p>- beetroot_____________ 24,-</p>
+          <p>- Classic______________ 24,-</p>
+          <p>- Beetroot_____________ 24,-</p>
         </div>
         <div class="grid_1-1_pasta1"></div>
       </div>
@@ -34,18 +37,18 @@
         <div class="grid_1-1_order"></div>
         <div class="menu_pasta2">
           <h3>Tagilatelle</h3>
-          <p>- classic______________ 35,-</p>
-          <p>- herbs_______________ 39,-</p>
+          <p>- Classic______________ 35,-</p>
+          <p>- Herbs_______________ 39,-</p>
         </div>
       </div>
       <div class="grid_1-1">
         <div class="menu_pasta3">
           <h3>Ravioli</h3>
-          <p>- heat_________________ 65,-</p>
-          <p>- pumpkin_____________ 49,-</p>
-          <p>- truffle & cheese_______ 59,-</p>
-          <p>- ricotta & spinach______ 45,-</p>
-          <p>- mushroom___________ 49,-</p>
+          <p>- Heat_________________ 65,-</p>
+          <p>- Pumpkin_____________ 49,-</p>
+          <p>- Truffle & cheese_______ 59,-</p>
+          <p>- Ricotta & spinach______ 45,-</p>
+          <p>- Mushroom___________ 49,-</p>
         </div>
         <div class="grid_1-1_pasta3"></div>
       </div>
@@ -53,15 +56,18 @@
         <div class="grid_1-1_order"></div>
         <div class="menu_pasta4">
           <h3>Sauces</h3>
-          <p>- homemade bolognese__ 43,-</p>
-          <p>- wild boar ragú________ 60,-</p>
-          <p>- roe deer ragú_________ 60,-</p>
-          <p>- cacio & pepe_________ 65,-</p>
-          <p>- carbonara____________ 65,-</p>
-          <p>- parmigiano cream_____ 45,- (90 g)</p>
+          <p>- Homemade bolognese__ 43,-</p>
+          <p>- Wild boar ragú________ 60,-</p>
+          <p>- Roe deer ragú_________ 60,-</p>
+          <p>- Cacio & pepe_________ 65,-</p>
+          <p>- Carbonara____________ 65,-</p>
+          <p>- Parmigiano cream_____ 45,- (90 g)</p>
         </div>
       </div>
       <p>Since our products are artisanal, we might not have all the options every day. DM us on Instagram or call us for info on availability.</p>
+      <div class="order-button">
+        <p>Order your pasta</p>
+      </div>
     </main>
     <footer></footer>
   </body>
