--- a/about.html
+++ b/about.html
@@ -6,5 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La fresca</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1>About us</h1>
+      <div class="grid_1-1-2">
+        <div class="about_us">
+          <p>
+            La Fresca means “The Fresh One” and our vision is to bring people together in an increasingly busy world, through great fresh pasta. We believe that good food is about a moment in time to share with loved ones and a way to connect with
+            each other, without the hassles of everyday life.
+          </p>
+        </div>
+        <div class="video_interview"></div>
+        <div class="billede_shop"></div>
+        <div class="story">
+          <h2>A simple story</h2>
+          <p>La Fresca was founded by Francesca and Fannar, the idea came during a trip to Bologna, the Italian capital of pasta and the cradle of lasagne.</p>
+          <p>While strolling the streets of Bologna, we noticed fresh pasta stores everywhere and after trying for ourselves, we thought, wouldn't it be great to have this in Copenhagen?</p>
+          <p>We decided to bring the concept of the pasta shop (pastificio in Italian) to Copenhagen to show that a great pasta dish can be prepared quickly and perfectly in your home, not just at the restaurant.</p>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
