--- a/about.html
+++ b/about.html
@@ -5,7 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
+    <link rel="stylesheet" href="style/about.css" />
+    <link rel="stylesheet" href="style/overall.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <title>La fresca</title>
+  </head>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Selection</a></li>
+        <li><a href="about.html">About us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   </head>
   <body>
     <main>
