--- a/index.html
+++ b/index.html
@@ -12,16 +12,23 @@
     <title>La fresca</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="products.html">Selection</a></li>
-          <li><a href="about.html">About us</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div id="main_menu">
+      <div class="logo_area">
+        <a href=""><img src="img/lafresca_logo.webp" alt="" /></a>
+      </div>
+      <div class="inner_main_menu">
+        <header>
+          <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="products.html">Selection</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </header>
+      </div>
+    </div>
     <main>
       <div class="video_loop">
         <div class="home_card">
