--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="style/overall.css" />
     <link rel="stylesheet" href="style/index.css" />
+    <link rel="stylesheet" href="kopier_herfra/layout.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <title>La fresca</title>
@@ -43,8 +44,28 @@
       <h2>What is special about La Fresca?</h2>
       <p>All the pasta and homemade sauces are made fresh, every day. La Fresca concept is well-known in Italy: You choose among several options of pasta and sauces and you bring it home to cook.</p>
       <p>Easy as a supermarket trip, but good as at the restaurant!</p>
-      <div class="hot-to-guide">
-        <h2>Your pasta journey</h2>
+      <h2>Your pasta journey</h2>
+      <div class="how-to-guide.container">
+        <div class="step1">
+          <img src="" alt="" />
+          <h4>Step 1</h4>
+          <p>We pack your order</p>
+        </div>
+        <div class="step2">
+          <img src="" alt="" />
+          <h4>Step 2</h4>
+          <p>You pick up your order the same day</p>
+        </div>
+        <div class="step3">
+          <img src="" alt="" />
+          <h4>Step 3</h4>
+          <p>Prepare your long pasta by cooking it for 1,5 minutes, filled pasta for 3 minutes and gnocchi until they rise to the surface of the water</p>
+        </div>
+        <div class="step4">
+          <img src="" alt="" />
+          <h4>Step 4</h4>
+          <p>Enjoy your delicious pasta!</p>
+        </div>
       </div>
       <div class="order-button">
         <p>Order your pasta</p>
