--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <title>La fresca</title>
   </head>
   <body>
-    <div id="main_menu">
-      <div class="logo_area">
-        <a href=""><img src="img/lafresca_logo.webp" alt="" /></a>
-      </div>
-      <div class="inner_main_menu">
-        <header>
-          <nav>
+
+        <header class="banner">
+          <div class="logo">
+            <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo"></a>
+          </div>
+          <nav class="main-menu">
+            <button class="toggle-btn">Menu</button>
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="products.html">Selection</a></li>
@@ -88,6 +88,7 @@
         </div>
       </div>
     </main>
-    <script src="login.js"></script>
+    <script src="javascript/login.js"></script>
+    <script src="javascript/index.js"></script>
   </body>
 </html>
