--- a/about.html
+++ b/about.html
@@ -10,22 +10,24 @@
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <title>La fresca</title>
-  </head>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Selection</a></li>
-        <li><a href="about.html">About us</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  </head>
+    <header class="banner">
+      <div class="logo">
+        <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo"></a>
+      </div>
+      <nav class="main-menu">
+        <button class="toggle-btn">Menu</button>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="products.html">Selection</a></li>
+          <li><a href="about.html">About us</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
   <body>
     <main>
       <h1>About us</h1>
-      <div class="grid_1-1-2">
+      <div class="grid_1-1_2">
         <div class="about_us">
           <p>
             La Fresca means “The Fresh One” and our vision is to bring people together in an increasingly busy world, through great fresh pasta. We believe that good food is about a moment in time to share with loved ones and a way to connect with
@@ -33,7 +35,9 @@
           </p>
         </div>
         <div class="video_interview"></div>
-        <div class="billede_shop"></div>
+        <div class="billede_shop">
+          <img src="../img/gnocchi_pink.webp" alt="pasta" />
+        </div>
         <div class="story">
           <h2>A simple story</h2>
           <p>La Fresca was founded by Francesca and Fannar, the idea came during a trip to Bologna, the Italian capital of pasta and the cradle of lasagne.</p>
@@ -41,6 +45,6 @@
           <p>We decided to bring the concept of the pasta shop (pastificio in Italian) to Copenhagen to show that a great pasta dish can be prepared quickly and perfectly in your home, not just at the restaurant.</p>
         </div>
       </div>
-    </main>
+    </main>¨<script src="javascript/index.js"></script>
   </body>
 </html>
