--- a/products.html
+++ b/products.html
@@ -5,30 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
-    <link rel="stylesheet" href="style/products.css" />
     <link rel="stylesheet" href="style/overall.css" />
+    <link rel="stylesheet" href="style/products.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <title>La fresca</title>
   </head>
   <header>
-    <div id="main_menu">
-      <div class="logo_area">
-        <a href=""><img src="img/lafresca_logo.webp" alt="" /></a>
+    <header class="banner">
+      <div class="logo">
+        <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo" /></a>
       </div>
-      <div class="inner_main_menu">
-        <header>
-          <nav>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="products.html">Selection</a></li>
-              <li><a href="about.html">About us</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
-        </header>
-      </div>
-    </div>
+      <nav class="main-menu">
+        <button class="toggle-btn">Menu</button>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="products.html">Selection</a></li>
+          <li><a href="about.html">About us</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
   </header>
   <body>
     <main>
@@ -45,19 +42,19 @@
       <div class="grid_1-1">
         <div class="grid_1-1_order"></div>
         <div class="menu_pasta2">
-          <h3>Tagilatelle</h3>
-          <p>- Classic______________ 35,-</p>
-          <p>- Herbs_______________ 39,-</p>
-        </div>
-      </div>
-      <div class="grid_1-1">
-        <div class="menu_pasta3">
           <h3>Ravioli</h3>
           <p>- Heat_________________ 65,-</p>
           <p>- Pumpkin_____________ 49,-</p>
           <p>- Truffle & cheese_______ 59,-</p>
           <p>- Ricotta & spinach______ 45,-</p>
           <p>- Mushroom___________ 49,-</p>
+        </div>
+      </div>
+      <div class="grid_1-1">
+        <div class="menu_pasta3">
+          <h3>Tagilatelle</h3>
+          <p>- Classic______________ 35,-</p>
+          <p>- Herbs_______________ 39,-</p>
         </div>
         <div class="grid_1-1_pasta3"></div>
       </div>
