--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <div class="grid_1-1_2">
         <div class="about_us">
           <p>
-            La Fresca means “The Fresh One” and our vision is to bring people together in an increasingly busy world, through great fresh pasta. We believe that good food is about a moment in time to share with loved ones and a way to connect with
+            <b>La Fresca</b> means “The Fresh One” and our vision is to bring people together in an increasingly busy world, through great fresh pasta. We believe that good food is about a moment in time to share with loved ones and a way to connect with
             each other, without the hassles of everyday life.
           </p>
         </div>
