--- a/products.html
+++ b/products.html
@@ -11,21 +11,19 @@
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <title>La fresca</title>
   </head>
-  <header>
-    <header class="banner">
-      <div class="logo">
-        <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo" /></a>
-      </div>
-      <nav class="main-menu">
-        <button class="toggle-btn">Menu</button>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="products.html">Selection</a></li>
-          <li><a href="about.html">About us</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+  <header class="banner">
+    <div class="logo">
+      <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo" /></a>
+    </div>
+    <nav class="main-menu">
+      <button class="toggle-btn">Menu</button>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Selection</a></li>
+        <li><a href="about.html">About us</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </header>
   <body>
     <main>
@@ -37,10 +35,12 @@
           <p>- Classic______________ 24,-</p>
           <p>- Beetroot_____________ 24,-</p>
         </div>
-        <div class="grid_1-1_pasta1"></div>
+        <div class="grid_1-1_pasta1">
+          <img src="../Redesign_RESI/img/gnocchi_billede.webp" alt="gnocchi" />
+        </div>
       </div>
       <div class="grid_1-1">
-        <div class="grid_1-1_order"></div>
+        <div class="grid_1-1_order_1"><img src="../Redesign_RESI/img/ravioli_billede.webp" alt="ravioli" /></div>
         <div class="menu_pasta2">
           <h3>Ravioli</h3>
           <p>- Heat_________________ 65,-</p>
@@ -56,10 +56,10 @@
           <p>- Classic______________ 35,-</p>
           <p>- Herbs_______________ 39,-</p>
         </div>
-        <div class="grid_1-1_pasta3"></div>
+        <div class="grid_1-1_pasta3"><img src="../Redesign_RESI/img/lang_pasta.webp" alt="tagilatelle" /></div>
       </div>
       <div class="grid_1-1">
-        <div class="grid_1-1_order"></div>
+        <div class="grid_1-1_order"><img src="../Redesign_RESI/img/sauce_billede.webp" alt="sauce" /></div>
         <div class="menu_pasta4">
           <h3>Sauces</h3>
           <p>- Homemade bolognese__ 43,-</p>
@@ -70,7 +70,9 @@
           <p>- Parmigiano cream_____ 45,- (90 g)</p>
         </div>
       </div>
-      <p>Since our products are artisanal, we might not have all the options every day. DM us on Instagram or call us for info on availability.</p>
+      <div class="tekst_produkt">
+        <p>Since our products are artisanal, we might not have all the options every day. DM us on Instagram or call us for info on availability.</p>
+      </div>
       <div class="order-button">
         <p>Order your pasta</p>
       </div>
