--- a/products.html
+++ b/products.html
@@ -28,6 +28,9 @@
   <body>
     <main>
       <h1>Our pasta</h1>
+      <div class="tekst_produkt">
+        <p>Since our products are artisanal, we might not have all the options every day. DM us on Instagram or call us for info on availability. You are also more than welcome to stop by the shop, to see what our daily specials are.</p>
+      </div>
       <h2>Prices/100g</h2>
       <div class="grid_1-1">
         <div class="menu_pasta1">
@@ -70,9 +73,7 @@
           <p>- Parmigiano cream_____ 45,- (90 g)</p>
         </div>
       </div>
-      <div class="tekst_produkt">
-        <p>Since our products are artisanal, we might not have all the options every day. DM us on Instagram or call us for info on availability.</p>
-      </div>
+
       <div class="order-button">
         <p>Order your pasta</p>
       </div>
