--- a/index.html
+++ b/index.html
@@ -7,85 +7,91 @@
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="style/overall.css" />
     <link rel="stylesheet" href="style/index.css" />
-    <link rel="stylesheet" href="kopier_herfra/layout.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <title>La fresca</title>
   </head>
   <body>
-
-        <header class="banner">
-          <div class="logo">
-            <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo"></a>
-          </div>
-          <nav class="main-menu">
-            <button class="toggle-btn">Menu</button>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="products.html">Selection</a></li>
-              <li><a href="about.html">About us</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
-        </header>
+    <header class="banner">
+      <div class="logo">
+        <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo" /></a>
       </div>
-    </div>
+      <nav class="main-menu">
+        <button class="toggle-btn">Menu</button>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="products.html">Selection</a></li>
+          <li><a href="about.html">About us</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <div class="video_loop">
         <div class="home_card">
-          <h1>Ciao Copenhagen!</h1>
-          <p>We are La Fresca, an authentic Italian pasta shop, where you can find all the fresh pasta and sauces that your heart desires, and cook it at home</p>
-          <div class="order-button">
-            <p>Order your pasta</p>
+          <img src="img/pasta_shop.png" alt="Pasta butik" style="width: 100%" />
+          <div class="text-box">
+            <h1>Ciao Copenhagen!</h1>
+            <p>We are La Fresca, an authentic Italian pasta shop, where you can find all the fresh pasta and sauces that your heart desires, and cook it at home</p>
+            <button class="button">
+              <a href="https://lafresca.nemtakeaway.dk/order.php">Order your pasta</a>
+            </button>
           </div>
         </div>
       </div>
-      <div class="about_lafresca"></div>
-      <h2>What is special about La Fresca?</h2>
-      <p>All the pasta and homemade sauces are made fresh, every day. La Fresca concept is well-known in Italy: You choose among several options of pasta and sauces and you bring it home to cook.</p>
-      <p>Easy as a supermarket trip, but good as at the restaurant!</p>
-      <h2>Your pasta journey</h2>
-      <div class="how-to-guide.container">
+      <div class="container">
+        <div class="about_lafresca">
+          <h2>What is special about La Fresca?</h2>
+          <p>All the pasta and homemade sauces are made fresh, every day. La Fresca concept is well-known in Italy: You choose among several options of pasta and sauces and you bring it home to cook.</p>
+          <p>Easy as a supermarket trip, but good as at the restaurant!</p>
+        </div>
+      </div>
+      <div class="grid_1-1-1-1">
+        <h2>Your pasta journey</h2>
         <div class="step1">
-          <img src="" alt="" />
+          <img src="img/packing.png" alt="Cardboard box getting packed drawing" />
           <h4>Step 1</h4>
           <p>We pack your order</p>
         </div>
         <div class="step2">
-          <img src="" alt="" />
+          <img src="img/packed.png" alt="Cardboard box packed drawing" />
           <h4>Step 2</h4>
           <p>You pick up your order the same day</p>
         </div>
         <div class="step3">
-          <img src="" alt="" />
+          <img src="img/prepare.png" alt="Prearing the food drawing" />
           <h4>Step 3</h4>
           <p>Prepare your long pasta by cooking it for 1,5 minutes, filled pasta for 3 minutes and gnocchi until they rise to the surface of the water</p>
         </div>
         <div class="step4">
-          <img src="" alt="" />
+          <img src="img/eat.png" alt="Eating the food drawing" />
           <h4>Step 4</h4>
           <p>Enjoy your delicious pasta!</p>
         </div>
       </div>
-      <div class="order-button">
-        <p>Order your pasta</p>
+      <div class="button2">
+        <button class="button">
+          <a href="https://lafresca.nemtakeaway.dk/order.php">Order your pasta</a>
+        </button>
       </div>
-      <div class="grid_1-1_2">
-        <div class="pasta-1">
-          <img src="" alt="" />
+      <h2>Your choices</h2>
+      <div class="grid_1-1">
+        <figure>
+          <img src="img/pasta2.png" alt="" />
           <h3>Gnocchi</h3>
-        </div>
-        <div class="pasta-2">
-          <img src="" alt="" />
+        </figure>
+        <figure>
+          <img src="img/pasta1.png" alt="" />
           <h3>Tagliatelle</h3>
-        </div>
-        <div class="pasta-3"></div>
-        <img src="" alt="" />
-        <h3>Ravioli</h3>
-        <div class="sauce">
-          <img src="" alt="" />
+        </figure>
+        <figure>
+          <img src="img/pasta3.png" alt="" />
+          <h3>Ravioli</h3>
+        </figure>
+        <figure>
+          <img src="img/sauce.png" alt="" />
           <h3>Sauces</h3>
-        </div>
+        </figure>
       </div>
     </main>
     <script src="javascript/login.js"></script>
