--- a/products.html
+++ b/products.html
@@ -39,11 +39,11 @@
           <p>- Beetroot_____________ 24,-</p>
         </div>
         <div class="grid_1-1_pasta1">
-          <img src="../Redesign_RESI/img/gnocchi_billede.webp" alt="gnocchi" />
+          <img src="img/gnocchi_billede.webp" alt="gnocchi" />
         </div>
       </div>
       <div class="grid_1-1">
-        <div class="grid_1-1_order_1"><img src="../Redesign_RESI/img/ravioli_billede.webp" alt="ravioli" /></div>
+        <div class="grid_1-1_order_1"><img src="img/ravioli_billede.webp" alt="ravioli" /></div>
         <div class="menu_pasta2">
           <h3>Ravioli</h3>
           <p>- Heat_________________ 65,-</p>
@@ -59,10 +59,10 @@
           <p>- Classic______________ 35,-</p>
           <p>- Herbs_______________ 39,-</p>
         </div>
-        <div class="grid_1-1_pasta3"><img src="../Redesign_RESI/img/lang_pasta.webp" alt="tagilatelle" /></div>
+        <div class="grid_1-1_pasta3"><img src="img/lang_pasta.webp" alt="tagilatelle" /></div>
       </div>
       <div class="grid_1-1">
-        <div class="grid_1-1_order"><img src="../Redesign_RESI/img/sauce_billede.webp" alt="sauce" /></div>
+        <div class="grid_1-1_order"><img src="img/sauce_billede.webp" alt="sauce" /></div>
         <div class="menu_pasta4">
           <h3>Sauces</h3>
           <p>- Homemade bolognese__ 43,-</p>
