--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style/index.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
+    <script src="https://kit.fontawesome.com/2efe57052b.js" crossorigin="anonymous"></script>
     <title>La fresca</title>
   </head>
   <body>
@@ -96,5 +97,52 @@
     </main>
     <script src="javascript/login.js"></script>
     <script src="javascript/index.js"></script>
+    <footer>
+      <div class="footer">
+        <div class="col-1">
+          <h5>Contact</h5>
+          <p>Jernbane Allé 35, St.Tv. 2720 Vanløse</p>
+          <p>Cvr. 43010670</p>
+          <div class="social-links">
+            <a href="https://www.facebook.com/profile.php?id=100081842547637"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/lafrescadk/"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+        <div class="col-2">
+          <h5>Opening hours</h5>
+          <p>Monday - Thursday: 11:00 - 19:00</p>
+          <p>Friday: 11:00 - 18:00</p>
+          <p>Saturday: Closed</p>
+          <p>Sunday: 12:00 - 18:00</p>
+        </div>
+        <div class="col-3">
+          <h5>Information</h5>
+          <div class="grid_1-1-footer">
+            <div class="tekst-boks1">
+              <li>Customers</li>
+              <ul>
+                <li>+45 71 80 33 78</li>
+                <li>info@lafresca.dk</li>
+              </ul>
+              <li>Business</li>
+              <ul>
+                <li>+45 20 43 65 42</li>
+                <li>business@lafresca.dk</li>
+              </ul>
+            </div>
+            <div class="links">
+              <a href="#">Privacy policy</a>
+              <a href="#">Terms & conditions</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="grid-footer">
+        <div class="footer-tekst">
+          <p>Ⓒ La Fresca - 2022</p>
+          <p>By: Resi - Kea</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
