--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,12 @@
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <title>La fresca</title>
   </head>
-  <header>
-    <nav>
+  <header class="banner">
+    <div class="logo">
+      <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo" /></a>
+    </div>
+    <nav class="main-menu">
+      <button class="toggle-btn">Menu</button>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Selection</a></li>
