index og footer

--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
       <h2>Your choices</h2>
       <div class="grid_1-1">
         <figure>
-          <img src="img/pasta2.png" alt="" />
+          <a href="products.html#gnocchi"><img src="img/pasta2.png" alt="" /></a>
           <h3>Gnocchi</h3>
         </figure>
         <figure>
-          <img src="img/pasta1.png" alt="" />
-          <h3>Tagliatelle</h3>
-        </figure>
-        <figure>
-          <img src="img/pasta3.png" alt="" />
+          <a href="products.html#ravioli"><img src="img/pasta3.png" alt="" /></a>
           <h3>Ravioli</h3>
         </figure>
         <figure>
-          <img src="img/sauce.png" alt="" />
+          <a href="products.html#tagliatelle"><img src="img/pasta1.png" alt="" /></a>
+          <h3>Tagliatelle</h3>
+        </figure>
+        <figure>
+          <a href="products.html#sauce"><img src="img/sauce.png" alt="" /></a>
           <h3>Sauces</h3>
         </figure>
       </div>
