--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
   </head>
   <body>
     <header class="banner header">
-      <div class="logo">
-        <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo" /></a>
-      </div>
+      <a href="index.html" class="logo"><img src="img/lafresca_logo.webp" alt="La fresca logo" /></a>
       <nav class="main-menu">
         <button class="toggle-btn">Menu</button>
-        <ul>
+        <ul id="menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Selection</a></li>
-          <li><a href="about.html">About us</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -84,19 +82,19 @@
       <h2>Your choices</h2>
       <div class="grid_1-1">
         <figure>
-          <a href="products.html#gnocchi"><img src="img/pasta2.png" alt="" /></a>
+          <a href="products.html#gnocchi"><img src="img/gnocchi-home.webp" alt="" /></a>
           <h3>Gnocchi</h3>
         </figure>
         <figure>
-          <a href="products.html#ravioli"><img src="img/pasta3.png" alt="" /></a>
+          <a href="products.html#ravioli"><img src="img/ravioli-home.webp" alt="" /></a>
           <h3>Ravioli</h3>
         </figure>
         <figure>
-          <a href="products.html#tagliatelle"><img src="img/pasta1.png" alt="" /></a>
+          <a href="products.html#tagliatelle"><img src="img/tagliatelle-home.webp" alt="" /></a>
           <h3>Tagliatelle</h3>
         </figure>
         <figure>
-          <a href="products.html#sauce"><img src="img/sauce.png" alt="" /></a>
+          <a href="products.html#sauce"><img src="img/sauce-home.webp" alt="" /></a>
           <h3>Sauces</h3>
         </figure>
       </div>
