--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
     <div class="background-maps">
      <div class="grid_1-1 maps">
       <img src="" alt="Billede af la fresca">
-      <img src="img/laFresca-maps.png" alt="">
+      <img src="img/laFresca-maps.webp" alt="">
      </div>
      </div>
     </main>
