--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <h1>Ciao Copenhagen!</h1>
             <p>We are La Fresca, an authentic Italian pasta shop, where you can find all the fresh pasta and sauces that your heart desires, and cook it at home</p>
             <div class="button-card">
-              <button class="button">
+              <div class="button">
                 <a href="https://lafresca.nemtakeaway.dk/order.php">Order your pasta</a>
-              </button>
+              </div>
             </div>
           </div>
         </div>
@@ -74,9 +74,9 @@
       </div>
       <div class="container2">
         <div class="button2">
-          <button class="button">
+          <div class="button">
             <a href="https://lafresca.nemtakeaway.dk/order.php">Order your pasta</a>
-          </button>
+          </div>
         </div>
       </div>
       <h2>Your choices</h2>
@@ -121,12 +121,12 @@
           <h5>Information</h5>
           <div class="grid_1-1-footer">
             <div class="tekst-boks1">
-              <li>Customers</li>
+              <h6>Customers</h6>
               <ul>
                 <li>+45 71 80 33 78</li>
                 <li>info@lafresca.dk</li>
               </ul>
-              <li>Business</li>
+              <h6>Business</h6>
               <ul>
                 <li>+45 20 43 65 42</li>
                 <li>business@lafresca.dk</li>
