--- a/kopier_herfra/footer.html
+++ b/kopier_herfra/footer.html
@@ -34,12 +34,12 @@
       <h5>Information</h5>
       <div class="grid_1-1-footer">
         <div class="tekst-boks1">
-          <li>Customers</li>
+          <h6>Customers</h6>
           <ul>
             <li>+45 71 80 33 78</li>
             <li>info@lafresca.dk</li>
           </ul>
-          <li>Business</li>
+          <h6>Business</h6>
           <ul>
             <li>+45 20 43 65 42</li>
             <li>business@lafresca.dk</li>
