--- a/about.html
+++ b/about.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="style/overall.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
     <link rel="stylesheet" href="https://use.typekit.net/adi4qgi.css" />
+    <script src="https://kit.fontawesome.com/2efe57052b.js" crossorigin="anonymous"></script>
     <title>La fresca</title>
-    <header class="banner">
+  </head>
+  <body>
+    <header class="banner header">
       <div class="logo">
-        <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo"></a>
+        <a href="index.html"><img src="img/lafresca_logo.webp" alt="La fresca logo" /></a>
       </div>
       <nav class="main-menu">
         <button class="toggle-btn">Menu</button>
@@ -24,14 +27,13 @@
         </ul>
       </nav>
     </header>
-  <body>
     <main>
       <h1>About us</h1>
       <div class="grid_1-1_2">
         <div class="about_us">
           <p>
-            <b>La Fresca</b> means “The Fresh One” and our vision is to bring people together in an increasingly busy world, through great fresh pasta. We believe that good food is about a moment in time to share with loved ones and a way to connect with
-            each other, without the hassles of everyday life.
+            <b>La Fresca</b> means “The Fresh One” and our vision is to bring people together in an increasingly busy world, through great fresh pasta. We believe that good food is about a moment in time to share with loved ones and a way to connect
+            with each other, without the hassles of everyday life.
           </p>
         </div>
         <div class="video_interview"></div>
@@ -45,6 +47,55 @@
           <p>We decided to bring the concept of the pasta shop (pastificio in Italian) to Copenhagen to show that a great pasta dish can be prepared quickly and perfectly in your home, not just at the restaurant.</p>
         </div>
       </div>
-    </main>¨<script src="javascript/index.js"></script>
+    </main>
+    <footer>
+      <div class="footer">
+        <div class="col-1">
+          <h5>Contact</h5>
+          <p>Jernbane Allé 35, St.Tv. 2720 Vanløse</p>
+          <p>Cvr. 43010670</p>
+          <div class="social-links">
+            <a href="https://www.facebook.com/profile.php?id=100081842547637"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/lafrescadk/"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+        <div class="col-2">
+          <h5>Opening hours</h5>
+          <p>Monday - Thursday: 11:00 - 19:00</p>
+          <p>Friday: 11:00 - 18:00</p>
+          <p>Saturday: Closed</p>
+          <p>Sunday: 12:00 - 18:00</p>
+        </div>
+        <div class="col-3">
+          <h5>Information</h5>
+          <div class="grid_1-1-footer">
+            <div class="tekst-boks1">
+              <li>Customers</li>
+              <ul>
+                <li>+45 71 80 33 78</li>
+                <li>info@lafresca.dk</li>
+              </ul>
+              <li>Business</li>
+              <ul>
+                <li>+45 20 43 65 42</li>
+                <li>business@lafresca.dk</li>
+              </ul>
+            </div>
+            <div class="links">
+              <a href="#">Privacy policy</a>
+              <a href="#">Terms & conditions</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="grid-footer">
+        <div class="footer-tekst">
+          <p>Ⓒ La Fresca - 2022</p>
+          <p>By: Resi - Kea</p>
+        </div>
+      </div>
+    </footer>
+    <script src="javascript/index.js"></script>
+    <script src="javascript/script.js"></script>
   </body>
 </html>
