--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="video_loop">
         <div class="home_card">
           <div class="home_card-pic">
-            <img src="img/pasta_shop.png" alt="Pasta butik" style="width: 100%" />
+            <img src="img/pasta_shop.webp" alt="Pasta butik" style="width: 100%" />
           </div>
           <div class="text-box">
             <h1>Ciao Copenhagen!</h1>
@@ -52,22 +52,22 @@
       <div class="grid_1-1-1-1">
         <h2>Your pasta journey</h2>
         <div class="step1">
-          <img src="img/packing.png" alt="Cardboard box getting packed drawing" />
+          <img src="img/packing.webp" alt="Cardboard box getting packed drawing" />
           <h4>Step 1</h4>
           <p>We pack your order</p>
         </div>
         <div class="step2">
-          <img src="img/packed.png" alt="Cardboard box packed drawing" />
+          <img src="img/packed.webp" alt="Cardboard box packed drawing" />
           <h4>Step 2</h4>
           <p>You pick up your order the same day</p>
         </div>
         <div class="step3">
-          <img src="img/prepare.png" alt="Prearing the food drawing" />
+          <img src="img/prepare.webp" alt="Prearing the food drawing" />
           <h4>Step 3</h4>
           <p>Prepare your long pasta by cooking it for 1,5 minutes, filled pasta for 3 minutes and gnocchi until they rise to the surface of the water</p>
         </div>
         <div class="step4">
-          <img src="img/eat.png" alt="Eating the food drawing" />
+          <img src="img/eat.webp" alt="Eating the food drawing" />
           <h4>Step 4</h4>
           <p>Enjoy your delicious pasta!</p>
         </div>
