--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Selection</a></li>
-          <li><a href="about.html">About us</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -31,21 +31,30 @@
       <h1>About us</h1>
       <div class="grid_1-1_2">
         <div class="about_us">
-          <p>
-            <b>La Fresca</b> means “The Fresh One” and our vision is to bring people together in an increasingly busy world, through great fresh pasta. We believe that good food is about a moment in time to share with loved ones and a way to connect
-            with each other, without the hassles of everyday life.
-          </p>
+          <div class="about_us-style">
+            <div class="h2-style">
+              <h2>La Fresca</h2>
+            </div>
+            <p>
+              Means “The Fresh One” and our vision is to bring people together in an increasingly busy world, through great fresh pasta. We believe that good food is about a moment in time to share with loved ones and a way to connect with each
+              other, without the hassles of everyday life.
+            </p>
+          </div>
         </div>
         <div class="video_interview"></div>
         <div class="billede_shop">
           <img src="../img/gnocchi_pink.webp" alt="pasta" />
         </div>
         <div class="story">
-          <h2>A simple story</h2>
+          <div class="story-style"></div>
+          <div class="h2-style">
+            <h2>A simple story</h2>
+          </div>
           <p>La Fresca was founded by Francesca and Fannar, the idea came during a trip to Bologna, the Italian capital of pasta and the cradle of lasagne.</p>
           <p>While strolling the streets of Bologna, we noticed fresh pasta stores everywhere and after trying for ourselves, we thought, wouldn't it be great to have this in Copenhagen?</p>
           <p>We decided to bring the concept of the pasta shop (pastificio in Italian) to Copenhagen to show that a great pasta dish can be prepared quickly and perfectly in your home, not just at the restaurant.</p>
         </div>
+      </div>
       </div>
     </main>
     <footer>
@@ -70,12 +79,12 @@
           <h5>Information</h5>
           <div class="grid_1-1-footer">
             <div class="tekst-boks1">
-              <li>Customers</li>
+              <h6>Customers</h6>
               <ul>
                 <li>+45 71 80 33 78</li>
                 <li>info@lafresca.dk</li>
               </ul>
-              <li>Business</li>
+              <h6>Business</h6>
               <ul>
                 <li>+45 20 43 65 42</li>
                 <li>business@lafresca.dk</li>
